hphp/hack/test/typecheck/reserved_name12.php.exp
File "reserved_name12.php", line 5, characters 7-9:
Num cannot be used as it is reserved. (Naming[2068])
