hphp/hack/test/typecheck/reserved_name12.php
<?hh

namespace Foo;

class Num {}
